MID-8536 fixed unknown items in simulation delta viewer, removed unecessary ObjectDeltaType to DeltaObject and back parsing